--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             }
             .add-button {
                 padding: 10px 20px;
-                background: greenyellow;
+                background: rgb(21, 232, 60);
                 color: white;
                 border: none;
                 border-radius: 5px;
@@ -37,7 +37,7 @@
                 display: flex;
                 align-items: center;
                 padding: 10px;
-                margin: 10px 0;
+                margin: 10px;
                 background: white;
                 border-radius: 5px;
             }
